Reacting to Android captive portal URL

--- a/www/htdocs/css/notfallpunkt.css
+++ b/www/htdocs/css/notfallpunkt.css
@@ -162,3 +162,7 @@ body.page-board #boardForm  {
     /*background-color: var(--bs-light) !important;*/
     padding:0.6rem;
 }
+
+.alert.alert-warning {
+    color:var(--bs-secondary-text-emphasis);
+}
