HTTPS in navigation

--- a/www/tpl/main.html.twig
+++ b/www/tpl/main.html.twig
@@ -101,11 +101,9 @@
                                 </li>{% endif %}
                         </ul>
                     </li>
-                    {#
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        <a class="nav-link" href="https://{{ sys.accessPoint.hostname }}/" tabindex="-1" aria-disabled="true"><i class="fa fa-lock"></i> HTTPS</a>
                     </li>
-                    #}
                 </ul>
                 {#
                 <form>
