--- a/www/tpl/main.html.twig
+++ b/www/tpl/main.html.twig
@@ -102,7 +102,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://{{ sys.accessPoint.hostname }}/" tabindex="-1" aria-disabled="true"><i class="fa fa-lock"></i> HTTPS</a>
+                        <a class="nav-link" href="https://{{ sys.accessPoint.hostname }}/" tabindex="-1"><i class="fa fa-lock"></i> HTTPS</a>
                     </li>
                 </ul>
                 {#
